near-sdk-macros/src/core_impl/code_generator/snapshots/callback_args_mixed_serialization.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[unsafe(no_mangle)]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::current_account_id() != ::near_sdk::env::predecessor_account_id()
    {
        ::near_sdk::env::panic_err(::near_sdk::errors::PrivateMethod::new("method"));
    }
    #[derive(::near_sdk::borsh::BorshDeserialize)]
    #[borsh(crate = "::near_sdk::borsh")]
    struct Input {
        y: ::std::string::String,
    }
    let Input { y }: Input = match ::near_sdk::env::input() {
        Some(input) => {
            match ::near_sdk::borsh::BorshDeserialize::try_from_slice(&input) {
                Ok(deserialized) => deserialized,
                Err(e) => {
                    ::near_sdk::env::panic_err(
                        ::near_sdk::errors::BorshDeserializeError::new(
                            &format!("input: {e}"),
                        ),
                    );
                }
            }
        }
        None => {
            ::near_sdk::env::panic_err(
                ::near_sdk::errors::InvalidArgument::new(
                    "Expected input since method has arguments.",
                ),
            )
        }
    };
    let mut x: u64 = {
        let data = ::near_sdk::env::promise_result_checked(0u64, usize::MAX)
            .unwrap_or_else(|_| ::near_sdk::env::panic_err(
                ::near_sdk::errors::CallbackComputationUnsuccessful::new(0u64),
            ));
        ::near_sdk::borsh::BorshDeserialize::try_from_slice(&data)
            .unwrap_or_else(|e| ::near_sdk::env::panic_err(
                ::near_sdk::errors::BorshDeserializeError::new(&format!("callback: {e}")),
            ))
    };
    let z: ::std::vec::Vec<u8> = {
        let data = ::near_sdk::env::promise_result_checked(1u64, usize::MAX)
            .unwrap_or_else(|_| ::near_sdk::env::panic_err(
                ::near_sdk::errors::CallbackComputationUnsuccessful::new(1u64),
            ));
        ::near_sdk::serde_json::from_slice(&data)
            .unwrap_or_else(|e| ::near_sdk::env::panic_err(
                ::near_sdk::errors::JsonDeserializeError::new(&format!("callback: {e}")),
            ))
    };
    let contract = <Hello as ::near_sdk::state::ContractState>::state_read()
        .unwrap_or_default();
    Hello::method(&contract, &mut x, y, z);
}
