near-sdk-macros/src/core_impl/code_generator/snapshots/callback_args_results.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[unsafe(no_mangle)]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::current_account_id() != ::near_sdk::env::predecessor_account_id()
    {
        ::near_sdk::env::panic_err(::near_sdk::errors::PrivateMethod::new("method"));
    }
    let mut x: Result<u64, PromiseError> = ::near_sdk::env::promise_result_checked(
            0u64,
            usize::MAX,
        )
        .map(|data| {
            ::near_sdk::serde_json::from_slice(&data)
                .unwrap_or_else(|e| ::near_sdk::env::panic_err(
                    ::near_sdk::errors::JsonDeserializeError::new(
                        &format!("callback: {e}"),
                    ),
                ))
        });
    let y: Result<::std::string::String, PromiseError> = ::near_sdk::env::promise_result_checked(
            1u64,
            usize::MAX,
        )
        .map(|data| {
            ::near_sdk::serde_json::from_slice(&data)
                .unwrap_or_else(|e| ::near_sdk::env::panic_err(
                    ::near_sdk::errors::JsonDeserializeError::new(
                        &format!("callback: {e}"),
                    ),
                ))
        });
    let contract = <Hello as ::near_sdk::state::ContractState>::state_read()
        .unwrap_or_default();
    Hello::method(&contract, &mut x, y);
}
