near-sdk-macros/src/core_impl/code_generator/snapshots/ext_basic_borsh.snap
---
source: near-sdk-macros/src/core_impl/code_generator/ext.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
pub fn borsh_test(self, a: String) -> ::near_sdk::Promise {
    let __args = {
        #[derive(::near_sdk::borsh::BorshSerialize)]
        #[borsh(crate = "::near_sdk::borsh")]
        struct Input<'nearinput> {
            a: &'nearinput String,
        }
        let __args = Input { a: &a };
        match ::near_sdk::borsh::to_vec(&__args) {
            Ok(serialized) => serialized,
            Err(_) => {
                ::near_sdk::env::panic_str(
                    "Failed to serialize the cross contract args using Borsh.",
                )
            }
        }
    };
    match self.promise_or_create_on {
        ::near_sdk::PromiseOrValue::Promise(p) => p,
        ::near_sdk::PromiseOrValue::Value(account_id) => {
            ::near_sdk::Promise::new(account_id)
        }
    }
        .function_call_weight(
            ::std::string::String::from("borsh_test"),
            __args,
            self.deposit,
            self.static_gas,
            self.gas_weight,
        )
}
