near-sdk-macros/src/core_impl/code_generator/snapshots/ext_basic_json.snap
---
source: near-sdk-macros/src/core_impl/code_generator/ext.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
pub fn method(self, k: &String) -> ::near_sdk::Promise {
    let __args = {
        #[derive(::near_sdk::serde::Serialize)]
        #[serde(crate = "::near_sdk::serde")]
        struct Input<'nearinput> {
            k: &'nearinput String,
        }
        let __args = Input { k: &k };
        match near_sdk::serde_json::to_vec(&__args) {
            Ok(serialized) => serialized,
            Err(_) => {
                ::near_sdk::env::panic_err(
                    ::near_sdk::errors::JsonSerializeError::new("cross contract args"),
                )
            }
        }
    };
    match self.promise_or_create_on {
        ::near_sdk::PromiseOrValue::Promise(p) => p,
        ::near_sdk::PromiseOrValue::Value(account_id) => {
            ::near_sdk::Promise::new(account_id)
        }
    }
        .function_call_weight(
            ::std::string::String::from("method"),
            __args,
            self.deposit,
            self.static_gas,
            self.gas_weight,
        )
}
