near-sdk-macros/src/core_impl/code_generator/snapshots/handle_result_init_ignore_state.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn new() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::attached_deposit().as_yoctonear() != 0 {
        ::near_sdk::env::panic_str("Method new doesn't accept deposit");
    }
    let contract = Hello::new();
    match contract {
        ::std::result::Result::Ok(contract) => {
            ::near_sdk::env::state_write(&contract);
        }
        ::std::result::Result::Err(err) => {
            ::near_sdk::FunctionError::panic(&err);
        }
    }
}

